# LingXia

./: .gitignore  AGENTS.md  Cargo.toml  Readme.md  clippy.toml  install.ps1  install.sh  lingxia-versions.json
crates/lingxia-app-context/: Cargo.toml  README.md
crates/lingxia-app-context/src/: lib.rs
crates/lingxia-automation/: Cargo.toml
crates/lingxia-automation/src/: desktop.rs  host.rs  info.rs  input.rs  lib.rs  nav.rs  page.rs  resolve.rs
crates/lingxia-browser/: Cargo.toml  README.md
crates/lingxia-browser-shell/: Cargo.toml  README.md  build.rs
crates/lingxia-browser-shell/src/: address_bar.rs  bookmarks.rs  bookmarks_html.rs  downloads.rs  facade.rs  history.rs  lib.rs  platform_error.rs  privacy.rs  proxy.rs  proxy_settings.rs  settings.rs  url_match.rs
crates/lingxia-browser-shell/webui/: lxapp.json  package.json
crates/lingxia-browser/src/: automation.rs  chooser.rs  downloads.rs  internal_pages.rs  lib.rs  policy.rs  runtime.rs  tabs.rs  types.rs  webview.rs
crates/lingxia-computer-use/: Cargo.toml
crates/lingxia-computer-use/src/: error.rs  lib.rs  model.rs  stub.rs
crates/lingxia-devtool/: Cargo.toml
crates/lingxia-devtool-protocol/: Cargo.toml
crates/lingxia-devtool-protocol/src/: broker.rs  lib.rs  session_test.rs
crates/lingxia-devtool/src/: app.rs  browser.rs  lib.rs  lxapp.rs  lxapp_device.rs  lxapp_nav.rs  lxapp_page.rs  protocol.rs  session_test.rs  util.rs
crates/lingxia-gen/: Cargo.toml  README.md
crates/lingxia-gen/src/: assets.rs  i18n.rs  icons.rs  lib.rs  main.rs
crates/lingxia-host-macros/: Cargo.toml  README.md
crates/lingxia-host-macros/src/: lib.rs
crates/lingxia-log/: Cargo.toml
crates/lingxia-log/src/: lib.rs
crates/lingxia-logic/: Cargo.toml
crates/lingxia-logic/src/: app.rs  display.rs  env.rs  fs.rs  i18n.rs  i18n_generated.rs  input.rs  lib.rs  location.rs  lxapp.rs  message_port.rs  navigator.rs  public_types.rs  share.rs  shell.rs  storage.rs  surface.rs  system.rs  task_object.rs  ui.rs  update.rs
crates/lingxia-lxapp/: Cargo.toml  README.md
crates/lingxia-lxapp/src/: app.rs  applink.rs  appservice.rs  archive.rs  automation.rs  bridge.rs  cache.rs  delegate.rs  device.rs  error.rs  executor.rs  host.rs  lib.rs  log.rs  lx.rs  lxapp.rs  native_component.rs  page.rs  plugin.rs  provider.rs  route.rs  startup.rs  update.rs  view_call.rs  workers.rs
crates/lingxia-media/: Cargo.toml  README.md
crates/lingxia-media/src/: lib.rs  video.rs
crates/lingxia-messaging/: Cargo.toml  README.md
crates/lingxia-messaging/src/: lib.rs
crates/lingxia-native-codegen/: Cargo.toml
crates/lingxia-native-codegen/src/: lib.rs
crates/lingxia-native-macros/: Cargo.toml  README.md
crates/lingxia-native-macros/src/: lib.rs
crates/lingxia-observability/: Cargo.toml
crates/lingxia-observability/src/: lib.rs
crates/lingxia-platform/: Cargo.toml  build.rs
crates/lingxia-platform/src/: android.rs  apple.rs  desktop.rs  harmony.rs  i18n.rs  lib.rs  rt.rs  traits.rs  unsupported.rs  windows.rs
crates/lingxia-proxy/: Cargo.toml  README.md
crates/lingxia-proxy/src/: capture.rs  error.rs  gfwlist.rs  lib.rs  mitm.rs  router.rs  rule_list.rs  server.rs  upstream.rs
crates/lingxia-service/: Cargo.toml
crates/lingxia-service/src/: applink.rs  downloads.rs  favicon.rs  file.rs  lib.rs  media.rs  settings.rs  storage.rs  update.rs
crates/lingxia-settings/: Cargo.toml  README.md
crates/lingxia-settings/src/: lib.rs
crates/lingxia-shell/: Cargo.toml  README.md
crates/lingxia-shell/src/: activator.rs  address_bar.rs  downloads.rs  error.rs  facade.rs  lib.rs  manager.rs  panel.rs  pin.rs  proxy.rs  runtime.rs  settings.rs  store.rs  windows.rs
crates/lingxia-shell/webui/: .gitignore  lxapp.config.ts  lxapp.json  package.json
lingxia/: Cargo.toml  README.md  build.rs
lingxia-browser/: Cargo.toml
lingxia-browser/src/: downloads.rs  lib.rs
lingxia-browser/webui/: lxapp.config.ts  lxapp.json  package.json
lingxia-browser/webui/public/: downloads.css
lingxia-lib/: Cargo.toml  README.md  build.rs
lingxia-lib/src/: android.rs  apple.rs  harmony.rs  lib.rs  runtime.rs
lingxia-lib/src/android/: app.rs  ffi.rs  mod.rs
lingxia-lib/src/apple/: app.rs  ffi.rs
lingxia-lib/src/harmony/: app.rs  ffi.rs  mod.rs
lingxia-logic/: Cargo.toml  build.rs
lingxia-logic/src/: app.rs  device.rs  display.rs  env.rs  fs.rs  i18n.rs  i18n_generated.rs  input.rs  lib.rs  location.rs  media.rs  navigator.rs  open.rs  storage.rs  system.rs  ui.rs  update.rs
lingxia-logic/src/device/: actions.rs  info.rs  network.rs  wifi.rs
lingxia-logic/src/fs/: download.rs
lingxia-logic/src/media/: image.rs  picker.rs  preview.rs  save.rs  scan.rs  video.rs  video_file.rs
lingxia-logic/src/ui/: action_sheet.rs  capsule.rs  modal.rs  navbar.rs  picker.rs  popup.rs  pull_to_refresh.rs  router.rs  tabbar.rs  toast.rs
lingxia-lxapp/: Cargo.toml
lingxia-lxapp/src/: app.rs  appservice.rs  bridge.rs  browser.rs  cache.rs  cloud.rs  config.rs  delegate.rs  download.rs  download_manager.rs  error.rs  event.rs  executor.rs  host.rs  lib.rs  lifecycle.rs  log.rs  lx.rs  lxapp.rs  module.rs  page.rs  panel.rs  plugin.rs  provider.rs  push_notification.rs  route.rs  startup.rs  stream_source.rs  update.rs
lingxia-lxapp/src/app/: settings.rs  state.rs
lingxia-lxapp/src/appservice/: app.rs  bridge.rs  bridge_events.rs  event_bus.rs  lx.rs  native_component.rs  page.rs  plugin.rs  runtime_ctx.rs  update.rs  view_call.rs
lingxia-lxapp/src/bridge/: protocol.rs
lingxia-miniapp/: Cargo.toml
lingxia-miniapp/src/: app.rs  appservice.rs  error.rs  lib.rs  log.rs  miniapp.rs  page.rs
lingxia-webview/: Cargo.toml  README.md  build.rs
lingxia-webview/android/: .gitignore  settings.gradle.kts
lingxia-webview/apple/: .gitignore
lingxia-webview/harmony/: .gitignore  build-profile.json5
lingxia-webview/lingxia/: Cargo.toml
lingxia-webview/src/: android.rs  apple.rs  controller.rs  harmony.rs  lib.rs  runtime.rs  traits.rs  webview.rs
lingxia/src/: android.rs  apple.rs  bootstrap.rs  harmony.rs  lib.rs
(+2385 files in other folders)
