[workspace]
members = [
    "crates/lingxia-app-context",
    "crates/lingxia-devtool",
    "crates/lingxia-devtool-protocol",
    "crates/lingxia-media",
    "crates/lingxia-shell",
    "crates/lingxia-browser",
    "crates/lingxia-service",
    "crates/lingxia-transfer",
    "crates/lingxia-terminal",
    "crates/lingxia-settings",
    "crates/lingxia-native-macros",
    "crates/lingxia-lxapp",
    "crates/lingxia-log",
    "crates/lingxia-provider",
    "crates/lingxia-update",
    "crates/lingxia-webview",
    "crates/lingxia-windows-host",
    "crates/lingxia-windows-sdk",
    "crates/lingxia-windows-build",
    "crates/lingxia-platform",
    "crates/lingxia-surface",
    "crates/lingxia-logic",
    "crates/lingxia-messaging",
    "crates/lingxia",
    "crates/lingxia-proxy",
    "tools/lingxia-runner/macos/runner-lib",
    "tools/lingxia-runner/windows",
    "tools/lingxia-cli",
    "tools/lingxia-devtools-cli",
    "crates/lingxia-native-codegen",
]
exclude = [
    "examples/lingxia-showcase/lingxia-lib",
    "examples/lingxia-showcase/windows",
    "examples/lingxia-codex/lingxia-codex-lib",
]
resolver = "2"

[workspace.package]
version = "0.9.0"
edition = "2024"
repository = "https://github.com/LingXia-Dev/LingXia"

[workspace.dependencies]
# Common dependencies that can be shared across workspace members
tokio = { version = "1.0", features = ["rt", "time", "macros", "sync"] }
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.143", features = ["raw_value"] }
http = "1.3.1"
http-body-util = "0.1.3"
bytes = "1.10.1"
thiserror = "2.0.16"
dashmap = "6.1.0"
urlencoding = "2.1.3"
base64 = "0.22.1"
log = "0.4.29"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["registry"] }
windows = { version = "0.62.2", default-features = false }
windows-core = { version = "0.62.2", default-features = false }

# Workspace-local crates
lingxia-lxapp = { path = "crates/lingxia-lxapp", version = "0.9.0", default-features = false }
lxapp = { package = "lingxia-lxapp", path = "crates/lingxia-lxapp", version = "0.9.0", default-features = false }
lingxia_devtool = { package = "lingxia-devtool", path = "crates/lingxia-devtool", version = "0.9.0" }
lingxia-devtool-protocol = { path = "crates/lingxia-devtool-protocol", version = "0.9.0" }
lingxia-log = { path = "crates/lingxia-log", version = "0.9.0" }
lingxia-provider = { path = "crates/lingxia-provider", version = "0.9.0" }
lingxia-update = { path = "crates/lingxia-update", version = "0.9.0" }
lingxia-app-context = { path = "crates/lingxia-app-context", version = "0.9.0" }
lingxia-media = { path = "crates/lingxia-media", version = "0.9.0" }
lingxia-webview = { path = "crates/lingxia-webview", version = "0.9.0" }
lingxia-windows-host = { path = "crates/lingxia-windows-host", version = "0.9.0" }
lingxia-windows-sdk = { path = "crates/lingxia-windows-sdk", version = "0.9.0", default-features = false }
lingxia-windows-build = { path = "crates/lingxia-windows-build", version = "0.9.0" }
lingxia-platform = { path = "crates/lingxia-platform", version = "0.9.0" }
lingxia-surface = { path = "crates/lingxia-surface", version = "0.9.0" }
lingxia-messaging = { path = "crates/lingxia-messaging", version = "0.9.0" }
lingxia-logic = { path = "crates/lingxia-logic", version = "0.9.0" }
lingxia = { path = "crates/lingxia", version = "0.9.0", default-features = false }
lingxia-native-codegen = { path = "crates/lingxia-native-codegen", version = "0.9.0" }
lingxia-proxy = { path = "crates/lingxia-proxy", version = "0.9.0" }
lingxia-native-macros = { path = "crates/lingxia-native-macros", version = "0.9.0" }
lingxia-browser = { path = "crates/lingxia-browser", version = "0.9.0" }
lingxia-service = { path = "crates/lingxia-service", version = "0.9.0" }
lingxia-transfer = { path = "crates/lingxia-transfer", version = "0.9.0" }
lingxia-terminal = { path = "crates/lingxia-terminal", version = "0.9.0" }
lingxia-settings = { path = "crates/lingxia-settings", version = "0.9.0" }
lingxia-shell = { path = "crates/lingxia-shell", version = "0.9.0" }

# Harmony NAPI bindings
napi-ohos = "1.1.0"
napi-derive-ohos = "1.1.0"

# Rong runtime (published on crates.io)
rong = { version = "0.4.0", default-features = false }
rong_rt = { version = "0.4.0", default-features = false }
rong_modules = { version = "0.4.0", default-features = false }
rong_http = { version = "0.4.0", default-features = false }
rong_console = "0.4.0"
rong_event = "0.4.0"
rong_storage = "0.4.0"
rong_abort = "0.4.0"
rong_assert = "0.4.0"
rong_buffer = "0.4.0"
rong_encoding = "0.4.0"
rong_exception = "0.4.0"
rong_stream = "0.4.0"
rong_timer = "0.4.0"
rong_url = "0.4.0"

[patch.crates-io]
windows = { git = "https://github.com/microsoft/windows-rs.git", rev = "cf58d5cfe7deccb73a55aeb4aa6799dc1b06544c", package = "windows" }
windows-collections = { git = "https://github.com/microsoft/windows-rs.git", rev = "cf58d5cfe7deccb73a55aeb4aa6799dc1b06544c", package = "windows-collections" }
windows-core = { git = "https://github.com/microsoft/windows-rs.git", rev = "cf58d5cfe7deccb73a55aeb4aa6799dc1b06544c", package = "windows-core" }
windows-future = { git = "https://github.com/microsoft/windows-rs.git", rev = "cf58d5cfe7deccb73a55aeb4aa6799dc1b06544c", package = "windows-future" }
windows-implement = { git = "https://github.com/microsoft/windows-rs.git", rev = "cf58d5cfe7deccb73a55aeb4aa6799dc1b06544c", package = "windows-implement" }
windows-interface = { git = "https://github.com/microsoft/windows-rs.git", rev = "cf58d5cfe7deccb73a55aeb4aa6799dc1b06544c", package = "windows-interface" }
windows-link = { git = "https://github.com/microsoft/windows-rs.git", rev = "cf58d5cfe7deccb73a55aeb4aa6799dc1b06544c", package = "windows-link" }
windows-numerics = { git = "https://github.com/microsoft/windows-rs.git", rev = "cf58d5cfe7deccb73a55aeb4aa6799dc1b06544c", package = "windows-numerics" }
windows-reference = { git = "https://github.com/microsoft/windows-rs.git", rev = "cf58d5cfe7deccb73a55aeb4aa6799dc1b06544c", package = "windows-reference" }
windows-result = { git = "https://github.com/microsoft/windows-rs.git", rev = "cf58d5cfe7deccb73a55aeb4aa6799dc1b06544c", package = "windows-result" }
windows-strings = { git = "https://github.com/microsoft/windows-rs.git", rev = "cf58d5cfe7deccb73a55aeb4aa6799dc1b06544c", package = "windows-strings" }
windows-threading = { git = "https://github.com/microsoft/windows-rs.git", rev = "cf58d5cfe7deccb73a55aeb4aa6799dc1b06544c", package = "windows-threading" }
windows-time = { git = "https://github.com/microsoft/windows-rs.git", rev = "cf58d5cfe7deccb73a55aeb4aa6799dc1b06544c", package = "windows-time" }
