[package]
name = "lingxia-browser"
version.workspace = true
edition.workspace = true
description = "Browser business module and host registrations for LingXia"
license = "MIT"

[dependencies]
lingxia = { workspace = true }
lxapp = { workspace = true }
lingxia-platform = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
rong = { workspace = true }
