[package]
name = "lingxia-logic"
version.workspace = true
edition.workspace = true
description = "JavaScript runtime for LingXia lightweight application"
license = "MIT"
repository = "https://github.com/LingXia-Dev/LingXia"
keywords = ["lingxia", "javascript", "runtime"]
categories = ["web-programming", "api-bindings"]

[dependencies]
rong = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = "0.4.28"
lxapp = { workspace = true }
lingxia-platform = { workspace = true }
lingxia-messaging = { workspace = true }
futures = { workspace = true }
rong_modules = { workspace = true }
rong_storage = { workspace = true }

