[package]
name = "lingxia-logic"
version.workspace = true
edition.workspace = true
description = "JavaScript runtime for LingXia lightweight application"
license = "MIT"
repository = "https://github.com/LingXia-Dev/LingXia"
keywords = ["lingxia", "javascript", "runtime"]
categories = ["web-programming", "api-bindings"]

[features]
default = ["tls-aws-lc"]
tls-aws-lc = ["lxapp/tls-aws-lc", "rong_modules/tls-aws-lc"]
tls-ring = ["lxapp/tls-ring", "rong_modules/tls-ring"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
lxapp = { workspace = true }
lingxia-platform = { workspace = true }
lingxia-messaging = { workspace = true }
futures = { workspace = true }
rong_modules = { workspace = true, features = ["timer", "navigator", "path", "http", "encoding", "event", "exception", "abort", "console", "url", "buffer", "fs", "stream"] }
rong_storage = { workspace = true }

# Target-specific JavaScript engine selection
# Apple platforms use JavaScriptCore.
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
rong = { workspace = true, features = ["jscore"] }
rong_modules = { workspace = true, features = ["jscore"] }

# Android currently uses QuickJS.
[target.'cfg(target_os = "android")'.dependencies]
rong = { workspace = true, features = ["quickjs"] }
rong_modules = { workspace = true, features = ["quickjs"] }

# HarmonyOS currently uses QuickJS; keep this explicit for future engine split.
[target.'cfg(all(target_os = "linux", target_env = "ohos"))'.dependencies]
rong = { workspace = true, features = ["quickjs"] }
rong_modules = { workspace = true, features = ["quickjs"] }

# Fallback for other targets.
[target.'cfg(not(any(target_os = "ios", target_os = "macos", target_os = "android", all(target_os = "linux", target_env = "ohos"))))'.dependencies]
rong = { workspace = true, features = ["quickjs"] }
rong_modules = { workspace = true, features = ["quickjs"] }
