[package]
name = "lingxia-lxapp"
version = "0.1.0"
edition = "2024"

[dependencies]
# Use workspace dependencies
http = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
bytes = "1.11"
http-body-util = "0.1"
redb = "3.1.0"
tar = "0.4.44"
zstd = "0.13.3"
ring = "0.17.14"

# Local dependencies
rong_modules = { workspace = true }
lingxia-platform = { path = "../lingxia-platform" }
lingxia-webview = { path = "../lingxia-webview" }
lingxia-messaging = { path = "../lingxia-messaging" }

# Target-specific JavaScript engine selection
# iOS/macOS automatically use JavaScriptCore
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
rong = { workspace = true, features = ["jscore"] }

# Other platforms automatically use QuickJS
[target.'cfg(not(any(target_os = "ios", target_os = "macos")))'.dependencies]
rong = { workspace = true, features = ["quickjs"] }
