[package]
name = "lingxia-lxapp"
version.workspace = true
edition.workspace = true

[dependencies]
# Use workspace dependencies
http = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
bytes = "1.11"
http-body-util = "0.1"
redb = "3.1.0"
tar = "0.4.44"
zstd = "0.13.3"
ring = "0.17.14"

# Local dependencies
rong_modules = { workspace = true }
rong_http = { workspace = true }
rong_fs = { workspace = true }
rong_console = { workspace = true }
rong_event = { workspace = true }
lingxia-platform = { workspace = true }
lingxia-webview = { workspace = true }
lingxia-messaging = { workspace = true }

# Target-specific JavaScript engine selection
# iOS/macOS automatically use JavaScriptCore
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
rong = { workspace = true, features = ["jscore"] }

# Other platforms automatically use QuickJS
[target.'cfg(not(any(target_os = "ios", target_os = "macos")))'.dependencies]
rong = { workspace = true, features = ["quickjs"] }
