[package]
name = "lingxia-lxapp"
version.workspace = true
edition.workspace = true
description = "LxApp (lightweight application) container and runtime for LingXia framework"
license = "MIT"
repository = "https://github.com/LingXia-Dev/LingXia"
keywords = ["lingxia", "lxapp", "lightweight-app", "webview"]
categories = ["web-programming", "api-bindings"]

[features]
default = ["tls-aws-lc"]
tls-aws-lc = ["rong_modules/tls-aws-lc", "rong_http/tls-aws-lc"]
tls-ring = ["rong_modules/tls-ring", "rong_http/tls-ring"]

[dependencies]
# Use workspace dependencies
http = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
bytes = "1.11"
http-body-util = "0.1"
redb = "3.1.0"
tar = "0.4.44"
zstd = "0.13.3"
ring = "0.17.14"
filetime = "0.2"

# Local dependencies
rong_modules = { workspace = true, features = ["timer", "navigator", "path", "http", "encoding", "event", "exception", "abort", "console", "url", "buffer", "fs", "stream", "storage"] }
rong_http = { workspace = true }
rong_fs = { workspace = true }
rong_console = { workspace = true }
rong_event = { workspace = true }
lingxia-platform = { workspace = true }
lingxia-webview = { workspace = true }
lingxia-messaging = { workspace = true }

# Target-specific JavaScript engine selection
# Apple platforms use JavaScriptCore.
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
rong = { workspace = true, features = ["jscore"] }
rong_modules = { workspace = true, features = ["jscore"] }

# Android currently uses QuickJS.
[target.'cfg(target_os = "android")'.dependencies]
rong = { workspace = true, features = ["quickjs"] }
rong_modules = { workspace = true, features = ["quickjs"] }

# HarmonyOS currently uses QuickJS; keep this explicit for future engine split.
[target.'cfg(all(target_os = "linux", target_env = "ohos"))'.dependencies]
rong = { workspace = true, features = ["quickjs"] }
rong_modules = { workspace = true, features = ["quickjs"] }

# Fallback for other targets.
[target.'cfg(not(any(target_os = "ios", target_os = "macos", target_os = "android", all(target_os = "linux", target_env = "ohos"))))'.dependencies]
rong = { workspace = true, features = ["quickjs"] }
rong_modules = { workspace = true, features = ["quickjs"] }
