[package]
name = "lingxia-miniapp"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "1.3.1"
serde_json = "1.0.140"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt", "time", "macros"] }
rong = { path = "../../starfire" }
rong_modules = { path = "../../starfire/rong_modules" }
