[package]
name = "lingxia-miniapp"
version = "0.1.0"
edition = "2024"

[dependencies]
# Use workspace dependencies
http = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

# Local dependencies
rong = { workspace = true }
rong_modules = { workspace = true }
