[package]
name = "lingxia"
version = "0.1.0"
edition = "2024"
description = "LingXia framework"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
rong = { workspace = true }
lxapp = { package = "lingxia-lxapp", path = "../lingxia-lxapp" }
lingxia-logic = { path = "../lingxia-logic" }
lingxia-platform = { path = "../lingxia-platform" }
lingxia-webview = { path = "../lingxia-webview" }
lingxia-messaging = { path = "../lingxia-messaging" }
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
android_logger = "0.15.0"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
swift-bridge = "0.1.57"
oslog = "0.2.0"

[target.'cfg(target_env = "ohos")'.dependencies]
ohos_hilog = "0.1.3"
napi-ohos = "1.1.0"
napi-derive-ohos = "1.1.0"

[build-dependencies]
swift-bridge-build = "0.1.57"
napi-build-ohos = "1.1.0"
