[package]
name = "lingxia-app-context"
version.workspace = true
edition.workspace = true
description = "Shared app/product context for LingXia crates"
license = "MIT"
readme = "README.md"
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
semver = "1.0"
