[package]
name = "lingxia-automation"
version.workspace = true
edition.workspace = true
description = "In-process UI/runtime automation JS API (lx.automation) for LingXia lxapps"
license = "MIT"
repository.workspace = true
keywords = ["lingxia", "automation", "javascript"]
categories = ["api-bindings"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
lxapp = { workspace = true, default-features = false, features = ["standard", "automation"] }
lingxia-webview = { workspace = true }
lingxia-platform = { workspace = true }
lingxia-browser = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }

# Target-specific JavaScript engine selection (mirrors lingxia-logic).
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
rong = { workspace = true, features = ["jscore"] }

[target.'cfg(target_os = "android")'.dependencies]
rong = { workspace = true, features = ["quickjs"] }

[target.'cfg(all(target_os = "linux", target_env = "ohos"))'.dependencies]
rong = { workspace = true, features = ["arkjs"] }

[target.'cfg(not(any(target_os = "ios", target_os = "macos", target_os = "android", all(target_os = "linux", target_env = "ohos"))))'.dependencies]
rong = { workspace = true, features = ["quickjs"] }
